# discogs_mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pre-commit.yml
src/discogs_mcp/: __init__.py  api_client.py  cache.py  config.py  main.py
tests/: test_api.py
