[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plastinka-discogs-agent"
version = "0.1.0"
description = "AI agent for vinyl record recognition using CrewAI and Discogs MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.28.0",
    "crewai-tools[mcp]>=0.2.0",
    "litellm>=1.30.0",
    "mcp>=0.9.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
  "pytest>=7.4.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plastinka"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
